# ChangeLog for games-action/mutantstorm-demo
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-action/mutantstorm-demo/ChangeLog,v 1.16 2014/09/07 09:51:49 ulm Exp $

  07 Sep 2014; Ulrich Müller <ulm@gentoo.org> mutantstorm-demo-1.33.ebuild:
  Drop reverse dependencies of sys-libs/lib-compat to unstable, bug 517932.

  03 Sep 2014; Michael Sterrett <mr_bones_@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  fix deps for x86 (bug #522086)

  26 Dec 2012; Tupone Alfredo <tupone@gentoo.org> mutantstorm-demo-1.33.ebuild:
  Use QA_PREBUILT. Bug #430982 by Diego Elio Pettenò

  08 Feb 2012; Mike Frysinger <vapier@gentoo.org> mutantstorm-demo-1.33.ebuild:
  Move to new unpacker eclass for unpack_makeself.

  14 Dec 2011; Mike Frysinger <vapier@gentoo.org> mutantstorm-demo-1.33.ebuild:
  The games.eclass has dropped GAMES_CHECK_LICENSE support (since portage now
  has ACCEPT_LICENSE), so drop it here too.

  01 Dec 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  Removing old virtual/x11 dependency.

  02 Sep 2006; Michael Sterrett <mr_bones_@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  add RESTRICT="strip"; fix typo; error check install

  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  Changed to use GAMES_CHECK_LICENSE variable.

  10 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  Added modular X dependencies and marking stable on amd64.

  26 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  Making games last on inherit line.

  21 Sep 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  Changed check_license to explicitly list license to check.

  29 Jun 2005; Chris Gianelloni <wolf31o2@gentoo.org>
  mutantstorm-demo-1.33.ebuild:
  Added amd64 to KEYWORDS and added amd64 RDEPEND.

  05 Sep 2004; Sven Wegener <swegener@gentoo.org> :