@@ -2,20 +2,25 @@
 Hash: SHA256
 
 DIST MutantStormDemo_1_33.sh.bin 9249167 SHA256 d1afce2b73a8adbef445ba60632163d499850498c430aa14d39377812e4f3561 SHA512 176c9f05ca03a1b8f397e046eac26c1442571806543df9b7e0545b8e32e0cc8f2fc827f03840c2082e600a9336ba2c7a7497ef336d9eb8c4e8f122abec413cad WHIRLPOOL 6d9e5bc5625f91be5785bcb52d0c6e4df353d3136a73c0c3b81e405f0f0b4e855d4faf503c2e369c25c55bf1e14d65194987045ce5848a3532fa68cdea6cbb61
-EBUILD mutantstorm-demo-1.33.ebuild 1281 SHA256 e91b4fdf8d296314f51d2a2a9d08c3e5e8ca1bbeb888df89d96c4a7174f5a7d7 SHA512 6b1222a62681aeeb53c6f2ddef24ab50ce330c823028f89dda4ecd26013da6c395b598969cbf1d21bd510555c1bce0ab1fff8d32647ef66dc97ec69ac3dbf1f4 WHIRLPOOL 8dab2a40e705cf24de2cdd35e030a6e5f91abef7243f41c7f82b2d3cab820dafc77a94932c0078ba028a13d766b6610268ab1edfd6cb5a3f138e6f0fbb47407f
-MISC ChangeLog 2487 SHA256 2988add10fe0a4727dc1db2e4084822989e1a015a088d673a9bab049b90dbc5a SHA512 71c19910bbeb180c2160b73935756cc89b7a4065b5fee00a4ed992a7f58eceb3a4b2d6fe329f72434c11f78f113d2792da267b1f1149c239053b9d30e1325c08 WHIRLPOOL 4e3385ed78e37f270c183696ac249f0137919606f6615bfba52e885674ba055ad25164985f135bc82b25ad45245906dedcd5bc14337e06d71a86510cfb17e8e9
+EBUILD mutantstorm-demo-1.33.ebuild 1465 SHA256 0af02019a8a3857a2f9ee5b22fccc6de1b553e2a2ca0de64d41c8ae79619a55f SHA512 3b0e605a95268b15de58b4b43794ba9fd5bb0979a9161e4171e521aa8cea19e4008ecf319b30ae9a87467febf73fca080d0db912ed1bdd4825d349f9a7a67845 WHIRLPOOL e82da7551ce8addd6b6586d5d5f6956d2ddcda27402324cc18ca5f7d307fa69b3a47cc03b5d38417eab15dad203703438b26ff0c098c93d19bc6b9d7d82d0726
+MISC ChangeLog 2610 SHA256 7299f39653d8510fac27c07dfb2e68ebf54e79dfce4c663278456d7ce724d60c SHA512 ee9c7010c5efaa86d1996647a55c5bf8692f0c38a332daddf04b6a233eecd59a575ebb65bfbf110500388008a3eafd7b73c9203a24dbf17cc274f09143635d90 WHIRLPOOL 75f0e0fc9d70f1710e23b5dad0b50539dfeb6ce842a8720fc42e970c052900a6628ab845f0c822d53077e7678bba9932bca52fc09c9381d2b406ce0a87ff43f7
 MISC metadata.xml 1668 SHA256 58a5065ac189d50b31f0fbb2f99d68ea5be9ecf41dc120283aa72f0b8677cdee SHA512 4afadc4ea6d43e309506270806dd6d0c0c1c8461057ad3627e38a80a97098ba5a2730beaa3a7127684e9c4ea52cd5c6bdfb59c72a73443fc11dd262a02f7f799 WHIRLPOOL 47c1d036ce9d5ebd9672b3a40bf4ba51e18c1bb12f7001493b96ca1221b8bfd8e198ae0cd0e0e3e57cf11a78e63182eee493b9af9c539d0b509c55474f2759c6
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQGcBAEBCAAGBQJUDCreAAoJEJQzkH1pP7W4Dd4L/0a6UMIPKOt4H2zgqxJOSV4M
-+50/XlP/xxmKuayvK6vV+pl5+tH4HacWoInMCWjKJDN+Mn+NIU6Ay7J1P8x8z8Bn
-oXzo4bdFi0jApAJfQDzSKFKuk2pJFSlWyxJqXpX11sqNgxnCQ2fzm/lcqy2p0ef5
-l8PMQmeoe1qauPdE+0jUzlp+EXpK0ZC0j5GK7H2UfK1zmsdIh9mKemSUayWDVq3W
-89kR9JeI4rogaH8eaQM/PYsW0An3XvSSm7EjIbsxn38shyVvhT21dXJY2uYHWKrn
-hETXtYU63KxBFDTWD1C1geC9GviJ89mYW3KMo+XaXafrFtoFeSiDepM/rDqGYDXS
-W8ZnlleYU/+zPOE08qzYQ0aA2BdyJ9Lmk0eBbOFIeGCOXymDxeFpFqhJVhQcXXBO
-+tZL4iYCVE77zTytEczTBks915EkC45mbQCV+lYEdQZkHllAyzzN1POM9U8OEijr
-bAfGDKDI4TUkamgBs/sK1hOAcuDWG2z9yzlR4NdXyw==
-=dVSW
+iQJ8BAEBCABmBQJUO6aMXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZORvMQALCiQyYv6WeuExVm30Pw/VIM
+L8nP6726XXwBnZM+zrVs+KJqbwUTRrOsstCNr0D7lLIOkA0sJKVmxVQ3Dzdop3Uw
+ACKr+kQxXHFffAZJDW9Xi26ggbfM/mqxFcfuk7BUi+Em09Em5Fr5KI6wJAU+lee5
+83nVxEjcfQjD0bBdjnmkWcg8/NpZNAVdeu2wViZz6dPGHSiJXwhrFDWet55Zqnf7
+gUOy6aLP+WlDrPXKvZJhuTf8OkBQwfWDBXwgxXLnkIHnWOGIHXGCwtCJxhZdVdir
+am0QkXGleHRX7f4edRM07pyVLnU67GchkZuoW5zDJYpgT2t7Z2VpPgrX5ntemQ4W
+s69VrVDCIV/+xdJK8Dmyo5b+LsV8kveIXbA9paNbi3hLPCi4/ZwNKK5UmEOqzvIG
+uN1a4yiVZUDHL9mIoaBCtfLisXCpau816/lv875yi7RI7ypu/PCtJcJOWlLXlX/Q
+8hZG0MbK1n7alPQ4wZcw+adIqd4SZMEizblskKJZc7OzMOBa8PKVhe8Mi7F/ymmx
+3d9653Hj/KUh5uiR+VqBVTMVNOkPzOxqgSLA/WNHiQx04yPU7gB1yNNCy6gGs77S
+NQ8P3lTgm1WJWm/penPxq2Tk+bP1IEwcEzrd18t2B3uEuEBVPqLyGXGOe/GJJt4L
+fo5+V93qV3Im6i92j+h0
+=8sc7
 -----END PGP SIGNATURE-----
