@@ -1,6 +1,6 @@
 # Copyright 1999-2014 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/mutantstorm-demo/mutantstorm-demo-1.33.ebuild,v 1.16 2014/09/07 09:51:49 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/mutantstorm-demo/mutantstorm-demo-1.33.ebuild,v 1.17 2014/10/13 10:16:43 mgorny Exp $
 
 EAPI=5
 inherit eutils unpacker games
@@ -15,16 +15,21 @@ KEYWORDS="-* ~amd64 ~x86"
 IUSE=""
 RESTRICT="strip"
 
-RDEPEND="virtual/opengl
-	sys-libs/lib-compat
-	amd64? (
-		app-emulation/emul-linux-x86-xlibs
-		app-emulation/emul-linux-x86-soundlibs
-		app-emulation/emul-linux-x86-sdl )
-	x86? (
-		media-libs/libsdl
-		x11-libs/libX11
-		x11-libs/libXext )"
+RDEPEND="sys-libs/lib-compat
+	|| (
+		(
+			media-libs/libsdl[abi_x86_32(-)]
+			x11-libs/libX11[abi_x86_32(-)]
+			x11-libs/libXext[abi_x86_32(-)]
+			virtual/opengl[abi_x86_32(-)]
+		)
+		amd64? (
+			app-emulation/emul-linux-x86-opengl[-abi_x86_32(-)]
+			app-emulation/emul-linux-x86-sdl[-abi_x86_32(-)]
+			app-emulation/emul-linux-x86-soundlibs[-abi_x86_32(-)]
+			app-emulation/emul-linux-x86-xlibs[-abi_x86_32(-)]
+		)
+	)"
 
 S=${WORKDIR}
 
