@@ -1,6 +1,9 @@
 # ChangeLog for games-action/mutantstorm-demo
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-action/mutantstorm-demo/ChangeLog,v 1.16 2014/09/07 09:51:49 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-action/mutantstorm-demo/ChangeLog,v 1.17 2014/10/13 10:16:43 mgorny Exp $
+
+  13 Oct 2014; Michał Górny <mgorny@gentoo.org> mutantstorm-demo-1.33.ebuild:
+  Support multilib providers for deps.
 
   07 Sep 2014; Ulrich Müller <ulm@gentoo.org> mutantstorm-demo-1.33.ebuild:
   Drop reverse dependencies of sys-libs/lib-compat to unstable, bug 517932.
